<resources>
    <string name="app_name">2 + 2 = 5</string>
    <string name="textview"> решение</string>
    <string name="textview1"> пример</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_division">/</string>
    <string name="button_multiply">*</string>
    <string name="button_percent">%</string>
    <string name="button_dot">.</string>
    <string name="button_result">=</string>
    <string name="button_clean">С</string>

</resources>
